// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text jsx elements and raw text 1`] = `
import { fbt } from "fbtee";
var x = fbt._(
  "{=m0}{=m1}{=m2} Good {=m4} !",
  [
    fbt._implicitParam(
      "=m0",
      /*#__PURE__*/ React.createElement(
        "span",
        null,
        fbt._("Where do", null, {
          hk: "2UCUDE",
        })
      )
    ),
    fbt._implicitParam(
      "=m1",
      /*#__PURE__*/ React.createElement(
        "b",
        null,
        fbt._("spaces", null, {
          hk: "99532",
        })
      )
    ),
    fbt._implicitParam(
      "=m2",
      /*#__PURE__*/ React.createElement(
        "i",
        null,
        fbt._("go?", null, {
          hk: "130kuA",
        })
      )
    ),
    fbt._implicitParam(
      "=m4",
      /*#__PURE__*/ React.createElement(
        "i",
        null,
        fbt._("question", null, {
          hk: "2K4Jua",
        })
      )
    ),
  ],
  {
    hk: "1hjQfl",
  }
);

`;

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text jsx elements and string variation arguments nested inside jsx element 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count)),
  fbt._(
    {
      "*": "{=m0} RawText {=m2}{=m3}",
      _1: "{=m0} RawText {=m2}{=m3}",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m0",
        /*#__PURE__*/ React.createElement(
          "a",
          null,
          fbt._(
            {
              "*": "OuterJsx1",
              _1: "OuterJsx1",
            },
            [fbt_sv_arg_0],
            {
              hk: "3WznBY",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m2",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "OuterJsx2",
              _1: "OuterJsx2",
            },
            [fbt_sv_arg_0],
            {
              hk: "30JSgM",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m3",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "{=m1}(plural)s{=m3}",
              _1: "{=m1}(plural){=m3}",
            },
            [
              fbt_sv_arg_0,
              fbt._implicitParam(
                "=m1",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx1",
                      _1: "InnerJsx1",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "24btfK",
                    }
                  )
                )
              ),
              fbt._implicitParam(
                "=m3",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx2",
                      _1: "InnerJsx2",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "13rpFP",
                    }
                  )
                )
              ),
            ],
            {
              hk: "1Nv3G4",
            }
          )
        )
      ),
    ],
    {
      hk: "2gHC6Z",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text jsx elements with string variation arguments 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count, "number")),
  fbt._(
    {
      "*": "{=m0}{=m1} !",
      _1: "{=m0}{=m1} !",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m0",
        /*#__PURE__*/ React.createElement(
          "span",
          null,
          fbt._(
            {
              "*": "There should be",
              _1: "There should be",
            },
            [fbt_sv_arg_0],
            {
              hk: "9ccJh",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m1",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "{number} spaces",
              _1: "a space",
            },
            [fbt_sv_arg_0],
            {
              hk: "1tuYe0",
            }
          )
        )
      ),
    ],
    {
      hk: "15ZlDy",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text should not preserve whitespace around text in JSXExpression 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count)),
  fbt._(
    {
      "*": "{=m0}textInJSXExpression{=m2}{=m3}",
      _1: "{=m0}textInJSXExpression{=m2}{=m3}",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m0",
        /*#__PURE__*/ React.createElement(
          "a",
          null,
          fbt._(
            {
              "*": "OuterJsx1",
              _1: "OuterJsx1",
            },
            [fbt_sv_arg_0],
            {
              hk: "4i3hty",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m2",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "OuterJsx2",
              _1: "OuterJsx2",
            },
            [fbt_sv_arg_0],
            {
              hk: "gfvaj",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m3",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "rawText textInJSXExpression{=m2}textInJSXExpression(plural)stextInJSXExpression{=m7}textInJSXExpression",
              _1: "rawText textInJSXExpression{=m2}textInJSXExpression(plural)textInJSXExpression{=m7}textInJSXExpression",
            },
            [
              fbt_sv_arg_0,
              fbt._implicitParam(
                "=m2",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx1",
                      _1: "InnerJsx1",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "1x2Bnp",
                    }
                  )
                )
              ),
              fbt._implicitParam(
                "=m7",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx2",
                      _1: "InnerJsx2",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "1xtOBl",
                    }
                  )
                )
              ),
            ],
            {
              hk: "20dibT",
            }
          )
        )
      ),
    ],
    {
      hk: "4f83iT",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text should preserve voluntarily added spaces between NON-raw text 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count)),
  fbt._(
    {
      "*": "{=m0} {=m2}{=m3}",
      _1: "{=m0} {=m2}{=m3}",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m0",
        /*#__PURE__*/ React.createElement(
          "a",
          null,
          fbt._(
            {
              "*": "OuterJsx1",
              _1: "OuterJsx1",
            },
            [fbt_sv_arg_0],
            {
              hk: "2mmfyN",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m2",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "OuterJsx2",
              _1: "OuterJsx2",
            },
            [fbt_sv_arg_0],
            {
              hk: "Hdu8h",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m3",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "{=m2} (plural)s {=m6} {=m8}",
              _1: "{=m2} (plural) {=m6} {=m8}",
            },
            [
              fbt_sv_arg_0,
              fbt._implicitParam(
                "=m2",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx1",
                      _1: "InnerJsx1",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "4C7fcW",
                    }
                  )
                )
              ),
              fbt._implicitParam(
                "=m6",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx2",
                      _1: "InnerJsx2",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "3jKBRy",
                    }
                  )
                )
              ),
              fbt._implicitParam(
                "=m8",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx3",
                      _1: "InnerJsx3",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "c0FbP",
                    }
                  )
                )
              ),
            ],
            {
              hk: "1LC9MD",
            }
          )
        )
      ),
    ],
    {
      hk: "2mKrhF",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should NOT preserve whitespaces that do not neighbor raw text should treat comments in JSXExpression like they are not here 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count)),
  fbt._(
    {
      "*": "{=m0}{=m1}{=m2}",
      _1: "{=m0}{=m1}{=m2}",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m0",
        /*#__PURE__*/ React.createElement(
          "a",
          null,
          fbt._(
            {
              "*": "OuterJsx1",
              _1: "OuterJsx1",
            },
            [fbt_sv_arg_0],
            {
              hk: "1EWqrj",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m1",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "OuterJsx2",
              _1: "OuterJsx2",
            },
            [fbt_sv_arg_0],
            {
              hk: "wXKn7",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m2",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "{=m2}(plural)s rawText",
              _1: "{=m2}(plural) rawText",
            },
            [
              fbt_sv_arg_0,
              fbt._implicitParam(
                "=m2",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "InnerJsx1",
                      _1: "InnerJsx1",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "qALb9",
                    }
                  )
                )
              ),
            ],
            {
              hk: "48kyWu",
            }
          )
        )
      ),
    ],
    {
      hk: "4owcY6",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should coalesce whitespace in desc when not requested 1`] = `
import { fbt } from "fbtee";
var x = fbt._("one line", null, {
  hk: "GzUkS",
});

`;

exports[`fbt preserveWhitespace argument should coalesce whitespace in desc when not requested 2`] = `
import { fbt } from "fbtee";
var x = fbt._("one space", null, {
  hk: "20Ivrq",
});

`;

exports[`fbt preserveWhitespace argument should coalesce whitespace in text when not requested 1`] = `
import { fbt } from "fbtee";
var x = fbt._("two spaces", null, {
  hk: "3yJQ6I",
});

`;

exports[`fbt preserveWhitespace argument should coalesce whitespace in text when not requested 2`] = `
import { fbt } from "fbtee";
var x = fbt._("two lines", null, {
  hk: "frweo",
});

`;

exports[`fbt preserveWhitespace argument should preserve whitespace around text with inner text and string variation 1`] = `
var fbt_sv_arg_0;
import { fbt } from "fbtee";
var x =
  ((fbt_sv_arg_0 = fbt._plural(this.state.ex1Count)),
  fbt._(
    {
      "*": "outerText {=m1}{=m2}",
      _1: "outerText {=m1}{=m2}",
    },
    [
      fbt_sv_arg_0,
      fbt._implicitParam(
        "=m1",
        /*#__PURE__*/ React.createElement(
          "a",
          null,
          fbt._(
            {
              "*": "outerJsx",
              _1: "outerJsx",
            },
            [fbt_sv_arg_0],
            {
              hk: "1UvHDM",
            }
          )
        )
      ),
      fbt._implicitParam(
        "=m2",
        /*#__PURE__*/ React.createElement(
          "b",
          null,
          fbt._(
            {
              "*": "{=m1} innerText (plural)s",
              _1: "{=m1} innerText (plural)",
            },
            [
              fbt_sv_arg_0,
              fbt._implicitParam(
                "=m1",
                /*#__PURE__*/ React.createElement(
                  "i",
                  null,
                  fbt._(
                    {
                      "*": "innerJsx",
                      _1: "innerJsx",
                    },
                    [fbt_sv_arg_0],
                    {
                      hk: "3AsEj4",
                    }
                  )
                )
              ),
            ],
            {
              hk: "3aHsRR",
            }
          )
        )
      ),
    ],
    {
      hk: "1K3ejM",
    }
  ));

`;

exports[`fbt preserveWhitespace argument should preserve whitespace in desc when requested 1`] = `
import { fbt } from "fbtee";
var x = fbt._("one line", null, {
  hk: "3zpJiU",
});

`;

exports[`fbt preserveWhitespace argument should preserve whitespace in desc when requested 2`] = `
import { fbt } from "fbtee";
var x = fbt._("one space", null, {
  hk: "4sRHxS",
});

`;

exports[`fbt preserveWhitespace argument should preserve whitespace in text when requested 1`] = `
import { fbt } from "fbtee";
var x = fbt._("two\\nlines", null, {
  hk: "PeIvU",
});

`;

exports[`fbt preserveWhitespace argument should preserve whitespace in text when requested 2`] = `
import { fbt } from "fbtee";
var x = fbt._("two  spaces", null, {
  hk: "EwXmv",
});

`;
